--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ node_js:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - webdriver-manager start
 install:
   - npm install
 script:
