--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - webdriver-manager update
-  - webdriver-manager start
+  - webdriver-manager start &
+  - sleep 3000
 
 install:
   - npm install -g protractor
