--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,17 @@ addons:
       language: node_js
 node_js:
   - 8
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - webdriver-manager update
 
 install:
-  - npm install -g protractor
   - npm install
+  - npm install -g protractor
+  - webdriver-manager update --standalone
   
-script:
+  before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   - webdriver-manager start &
   - sleep 3000
-  - npm run test
+
+script:
+  - npm test
