--- a/.travis.yml
+++ b/.travis.yml
@@ -10,17 +10,16 @@ addons:
       language: node_js
 node_js:
   - 8
-
-install:
-  - npm install
-  - npm install -g protractor
-  - webdriver-manager update --standalone
-  
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - webdriver-manager start &
   - sleep 3000
 
+install:
+  - npm install
+  - npm install -g protractor
+  - webdriver-manager update
+  
 script:
   - npm test
