--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ node_js:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - webdriver-manager start &
+  - nohup webdriver-manager start &
   - sleep 3000
 
 install:
