--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - nohup webdriver-manager start &
+  - git clone https://github.com/upgundecha/das-boot.git
+  - cd das-boot
+  - nohup mvn sprint-boot:run &
+  - cd ..
 
 install:
   - npm install
