--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
   - git clone https://github.com/upgundecha/das-boot.git
   - cd das-boot
   - nohup mvn sprint-boot:run &
+  - sleep 10
   - cd ..
 
 install:
