--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
   - nohup webdriver-manager start &
   - git clone https://github.com/upgundecha/das-boot.git
   - cd das-boot
-  - nohup mvn sprint-boot:run &
+  - mvn spring-boot:run &
   - sleep 10
   - cd ..
 
