--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_script:
   - nohup webdriver-manager start &
   - git clone https://github.com/upgundecha/das-boot.git
   - cd das-boot
-  - mvn spring-boot:run &
-  - sleep 10
+  - nohup mvn spring-boot:run &
+  - sleep 15
   - cd ..
 
 install:
